<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_timer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context="br.edu.ifspsaocarlos.sdm.boardgamehelper.activity.TimerActivity">

    <TextView
        android:id="@+id/txt_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_start_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="startTimer"
            android:text="@string/start" />

        <Button
            android:id="@+id/bt_resume_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="resumeTimer"
            android:text="@string/resume" />

        <Button
            android:id="@+id/bt_pause_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="pauseTimer"
            android:text="@string/pause" />

        <Button
            android:id="@+id/bt_stop_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="stopTimer"
            android:text="@string/stop" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_change_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="changeTimer"
        android:text="@string/change_timer" />
</LinearLayout>